--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start:android": "npm run build && npx cap sync && npx cap run android",
+    "start:ios": "npm run build && npx cap sync && npx cap run ios",
+    "open:android": "npm run build && npx cap sync && npx cap copy android && npx cap open android",
+    "open:ios": "npm run build && npx cap sync && npx cap copy ios && npx cap open ios",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/react": "^7.0.0",
