--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:dev": "vite build --no-lint",
     "preview": "vite preview",
     "start:android": "npm run build && npx cap sync && npx cap run android",
     "start:ios": "npm run build && npx cap sync && npx cap run ios",
@@ -19,6 +20,7 @@
     "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.0",
+    "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
