--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "5.7.0",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
