--- a/package.json
+++ b/package.json
@@ -58,9 +58,7 @@
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
-    "vitest": "^0.34.6"
-  },
-  "optionalDependencies": {
+    "vitest": "^0.34.6",
     "cypress": "13.6.6"
   },
   "description": "An Ionic project"
