--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "malcy-frontend",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,8 +27,8 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
+    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query-devtools": "^5.25.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -37,11 +37,13 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "malcy-shared": "file:../malcy-shared"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "5.7.0",
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -50,8 +52,11 @@
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "cypress": "^13.6.6",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
