--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "socket.io-client": "^4.7.4",
-    "malcy-shared": "file:../malcy-shared"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.4",
@@ -63,7 +62,8 @@
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "malcy-shared": "file:../malcy-shared"
   },
   "description": "An Ionic project"
 }
