--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "ionicons": "^7.0.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-router": "^5.3.4",
@@ -48,6 +52,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
