--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "mobx": "^6.12.0",
+    "mobx-persist-store": "^1.1.4",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
