--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "malcy-frontend",
   "private": true,
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
     "start:ios": "npm run build && npx cap sync && npx cap run ios",
     "open:android": "npm run build && npx cap sync && npx cap copy android && npx cap open android",
     "open:ios": "npm run build && npx cap sync && npx cap copy ios && npx cap open ios",
+    "generate:icons": "capacitor-assets generate",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
     "lint": "eslint"
