--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "malcy-frontend",
   "private": true,
-  "version": "0.0.9",
+  "version": "0.0.10",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -30,6 +30,7 @@
     "@ionic/react-router": "^7.0.0",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
+    "formik": "^2.4.5",
     "ionicons": "^7.0.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
@@ -43,7 +44,8 @@
     "react-leaflet-cluster": "^2.1.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.4",
