--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "malcy-frontend",
   "private": true,
-  "version": "0.1.11",
+  "version": "0.1.12",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.25",
     "ionicons": "^7.0.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
