--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "malcy-frontend",
   "private": true,
-  "version": "0.2.7",
+  "version": "0.2.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -30,6 +30,7 @@
     "@ionic/react-router": "^7.0.0",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.25",
     "ionicons": "^7.0.0",
