--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "@welldone-software/why-did-you-render": "^8.0.1",
     "autoprefixer": "^10.4.18",
     "cypress": "^13.6.6",
     "eslint": "^8.56.0",
